Horizontal scroll fix

--- a/Project/styles/mobile.css
+++ b/Project/styles/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 900px) {
     :root {
         --primary-color: #0F172A;
         /*The main page background.*/
